made another change to index

--- a/SignalR/SignalR/Views/Home/Index.cshtml
+++ b/SignalR/SignalR/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
                 <h2>@ViewBag.Message</h2>
             </hgroup>
             <p>
-                To learn more about ASP.NET MVC just ask Tim.
+                To learn more about ASP.NET MVC just ask Tim H.
             </p>
         </div>
     </section>
